# ota

./: .gitignore  README.md  pyproject.toml
ota/: cli.py  column.py  data_loader.py  execution_context.py  query_planner.py  row_batch.py  schema.py
ota/logical/expr/: abc.py  base.py  impls.py
ota/logical/plan/: base.py  builder.py  impls.py
ota/physical/expr/: abc.py  impls.py
ota/physical/plan/: base.py  impls.py
tests/: test_e2e.py
