[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ota"
version = "0.0.1"
requires-python = ">= 3.10"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest ~= 8.3.5"
]

[project.scripts]
ota = "ota.cli:main"

[tool.ruff]
line-length = 80
lint.extend-select = ["I"]
